[project]
name            = "edao-proxy"
version         = "0.1.0"
description     = "Vyper + Titanoboa workspace"
readme          = "README.md"
requires-python = ">=3.12"

# Runtime requirements
dependencies = [
    "vyper==0.4.3",
    "snekmate==0.1.2",
    "titanoboa==0.2.8",
]

[tool.uv]
dev-dependencies = [
    "pytest==9.0.2",
    "pytest-xdist>=3.8.0",
    "ruff==0.14.13",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]
